Make Code compatible with JDK 17