@@ -40,6 +40,7 @@ import spoon.reflect.visitor.CtScanner;
 import spoon.reflect.visitor.filter.TypeFilter;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -210,7 +211,9 @@ public class LeakedCollectionCheck extends IntegratedCheck {
 
         boolean foundPreviousAssignment = false;
         CtStatement currentStatement = ctVariableRead.getParent(CtStatement.class);
-        for (CtStatement ctStatement : SpoonUtil.getEffectiveStatements(ctExecutable.getBody()).reversed()) {
+        var reversedStatements = new ArrayList<>(SpoonUtil.getEffectiveStatements(ctExecutable.getBody()));
+        Collections.reverse(reversedStatements);
+        for (CtStatement ctStatement : reversedStatements) {
             if (!foundPreviousAssignment) {
                 if (ctStatement == currentStatement) {
                     foundPreviousAssignment = true;
@@ -249,7 +252,7 @@ public class LeakedCollectionCheck extends IntegratedCheck {
             List<CtExpression<?>> previousAssignees = findPreviousAssignee(ctVariableRead);
 
             if (!previousAssignees.isEmpty()) {
-                return findParameterReference(previousAssignees.getFirst(), ctExecutable);
+                return findParameterReference(previousAssignees.get(0), ctExecutable);
             }
 
             return Option.some((CtParameter<?>) ctVariableDeclaration);
@@ -412,13 +415,11 @@ public class LeakedCollectionCheck extends IntegratedCheck {
                         ctTypeMember = fixRecordAccessor(ctRecord, ctMethod);
                     }
 
-                    switch (ctTypeMember) {
-                        case CtConstructor<?> ctConstructor -> checkCtExecutableAssign(ctConstructor);
-                        case CtMethod<?> ctMethod -> {
-                            checkCtExecutableReturn(ctMethod);
-                            checkCtExecutableAssign(ctMethod);
-                        }
-                        default -> {}
+                    if (ctTypeMember instanceof CtConstructor<?> ctConstructor) {
+                        checkCtExecutableAssign(ctConstructor);
+                    } else if (ctTypeMember instanceof CtMethod<?> ctMethod) {
+                        checkCtExecutableReturn(ctMethod);
+                        checkCtExecutableAssign(ctMethod);
                     }
                 }
             }
